# freecadStudy

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  conanfile.txt  freeCAD项目架构分析.md  tasks.py  学习路径.md
.cache/clangd/index/: QtTest.cpp.748490612D17D4AB.idx
.github/workflows/: ci.yml
FreeCADStudyDoc/: freecad的执行顺序.md  第一阶段学习框架.md
FreeCADStudyDoc/app_application.h的分析/: FreeCAD参数配置中心的运作机制.md  FreeCAD文档概念解析.md  app下Application概述.md  事务分组和多文档同步详解.md  什么是信号通知系统？.md  性能优化机制延迟加载和缓存.md  用最简单的方式理解文件类型注册系统.md  链接和依赖管理概述.md  链接管理的核心作用.md
FreeCADStudyDoc/base/: Base模块（基础库层）分析.md
FreeCADStudyDoc/gui/: FreeCAD中的选择系统.md  FreeCAD项目中图形界面的实现方式.md  用户界面层 (Qt-based) 实现详解.md
FreeCADStudyDoc/工作台/: FreeCAD中的工作台机制.md  工作台模块列表.md
app_application.h的分析/: FreeCAD Application 类信号机制分析.md  FreeCAD事务与撤销系统详解.md  什么是参数配置中心（最基础的解释）.md  文件类型注册系统详解.md
cmake/: InstallRuntimeDeps.cmake.in
config/: linux.profile  linux.release.profile  windows.profile  windows.release.profile
data/: rj-45-volume.STEP
gui/: Open Inventor的实现机制.md  ViewProvider实现机制.md  ViewProvider的工作原理和流程.md  基础应用层(App)在GUI架构中的作用.md
src/Gui/: OccView.cpp  OccView.h  QtTest.cpp
工作台/: Assembly 装配模块.md  PartDesign模块的深入分析.md  Part模块.md
